--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 	--background-color: #ffffff;
 	--border-color: #8e8f99;
 	--footer-hover-color: #31d0aa;
+	--background-modal-color: #fcfcfc;
 }
 
 body {
@@ -92,6 +93,8 @@ h3 {
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
 
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 	/* outline: 2px solid tomato; */
 }
 .logo-web {
@@ -111,11 +114,29 @@ h3 {
 	margin-right: 40px;
 }
 
+.item {
+	position: relative;
+}
+
 .link {
 	color: var(--primary-text-color);
 	text-decoration-line: none;
 
 	font-weight: 500;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.main-index::after {
+	position: absolute;
+	content: '';
+	display: block;
+
+	width: 100%;
+	height: 4px;
+	/* left: 0; */
+	bottom: -100%;
+	background-color: var(--button-hover-color);
+	border-radius: 2px;
 }
 
 .site-nav.list {
@@ -139,6 +160,7 @@ h3 {
 .address-link {
 	color: var(--title-text-color);
 	text-decoration-line: none;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
@@ -198,6 +220,7 @@ h3 {
 	text-align: center;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -243,8 +266,6 @@ h3 {
 	border-radius: 4px;
 	justify-content: center;
 	align-items: center;
-	/* background-repeat: no-repeat;
-	background-position: center; */
 }
 
 .feature-title {
@@ -311,6 +332,8 @@ h3 {
 	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
 		0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 	border-radius: 0px 0px 4px 4px;
+
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-list {
@@ -361,7 +384,7 @@ h3 {
 
 	border-radius: 50%;
 
-	/* fill: var(--background-section-color); */
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-item:not(:last-child) {
@@ -387,6 +410,9 @@ h3 {
 	border-radius: 4px;
 	justify-content: center;
 	align-items: center;
+
+	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icon:hover {
@@ -431,6 +457,10 @@ h3 {
 	text-align: center;
 
 	border: 1px solid var(--button-filter-color);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-section .portfolio-item:not(:last-child) {
@@ -454,6 +484,8 @@ h3 {
 	margin-bottom: 0;
 
 	list-style: none;
+
+	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list .item {
@@ -491,9 +523,60 @@ h3 {
 }
 
 .portfolio-link {
+	/* posit	ion: relative; */
 	display: block;
 	margin-top: 0;
 	margin-bottom: 0;
+}
+
+.portfolio-position {
+	position: relative;
+
+	overflow: hidden;
+}
+
+.portfolio-position::after {
+	display: inline-block;
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--button-text-color);
+
+	opacity: 0;
+	z-index: 1;
+	transform: translateY(100%);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-hover {
+	position: absolute;
+	width: 100%;
+	margin-top: 0;
+	margin-bottom: 0;
+	top: 0;
+	left: 0;
+	padding: 40px 32px;
+	transform: translate(-50%, -50%);
+	color: var(--background-section-color);
+	opacity: 0;
+	z-index: 2;
+	transform: translateY(100%);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-link:hover .portfolio-hover {
+	opacity: 1;
+	transform: translateY(0);
+}
+
+.portfolio-link:hover .portfolio-position::after {
+	opacity: 1;
+	transform: translateY(0);
 }
 
 .border {
@@ -532,6 +615,7 @@ h3 {
 	line-height: 1.33;
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-web {
@@ -586,9 +670,81 @@ h3 {
 
 	border-radius: 50%;
 	background-color: rgba(255, 255, 255, 0.1);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
 .footer-link:focus {
 	background-color: var(--footer-hover-color);
+}
+
+/* / */
+
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(46, 47, 66, 0.4);
+	opacity: 1;
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+	opacity: 0;
+	pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+	transform: translate(-50%, -50%) scale(1.1);
+}
+
+.modal {
+	position: absolute;
+
+	top: 50%;
+	left: 50%;
+
+	width: 408px;
+	height: 576px;
+	background-color: var(--background-modal-color);
+	color: var(--primary-text-color);
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+		0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+
+	transform: translate(-50%, -50%) scale(1);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button {
+	position: absolute;
+	display: flex;
+	top: 24px;
+	right: 24px;
+	height: 24px;
+	width: 24px;
+	justify-content: center;
+	align-items: center;
+
+	border-radius: 50%;
+	background-color: var(--button-filter-color);
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon {
+	fill: var(--primary-text-color);
+}
+
+.modal-button:hover,
+.modal-button:focus {
+	background-color: var(--button-hover-color);
+}
+
+.modal-button:hover .modal-icon,
+.modal-button:focus .modal-icon {
+	fill: var(--background-color);
 }
