--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,12 @@ h3 {
 	/* left: 0; */
 	bottom: -100%;
 	background-color: var(--button-hover-color);
+
 	border-radius: 2px;
+}
+
+.main-index {
+	color: var(--button-hover-color);
 }
 
 .site-nav.list {
@@ -520,6 +525,7 @@ h3 {
 .portfolio-text {
 	margin-top: 0;
 	margin-bottom: 0;
+	color: var(--title-text-color);
 }
 
 .portfolio-link {
@@ -527,6 +533,7 @@ h3 {
 	display: block;
 	margin-top: 0;
 	margin-bottom: 0;
+	text-decoration: none;
 }
 
 .portfolio-position {
@@ -535,7 +542,7 @@ h3 {
 	overflow: hidden;
 }
 
-.portfolio-position::after {
+/* .portfolio-position::after {
 	display: inline-block;
 	content: '';
 	position: absolute;
@@ -550,20 +557,21 @@ h3 {
 	transform: translateY(100%);
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
 		transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .portfolio-hover {
 	position: absolute;
 	width: 100%;
+	height: 100%;
 	margin-top: 0;
 	margin-bottom: 0;
 	top: 0;
 	left: 0;
 	padding: 40px 32px;
-	transform: translate(-50%, -50%);
+	/* transform: translate(-50%, -50%); */
+	background-color: var(--button-text-color);
 	color: var(--background-section-color);
-	opacity: 0;
-	z-index: 2;
+
 	transform: translateY(100%);
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
 		transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -728,6 +736,7 @@ h3 {
 	width: 24px;
 	justify-content: center;
 	align-items: center;
+	cursor: pointer;
 
 	border-radius: 50%;
 	background-color: var(--button-filter-color);
