--- a/css/styles.css
+++ b/css/styles.css
@@ -573,8 +573,8 @@ h3 {
 	color: var(--background-section-color);
 
 	transform: translateY(100%);
-	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-		transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	/* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .portfolio-link:hover .portfolio-hover {
